[gd_scene load_steps=2 format=3 uid="uid://dowpt0atwxtld"]

[ext_resource type="Script" path="res://Cenas/invader_spawner.gd" id="1_55efy"]

[node name="InvaderSpawner" type="Node2D"]
position = Vector2(0, -195)
script = ExtResource("1_55efy")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
